--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.11.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
